--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0606.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0606.html
@@ -79,19 +79,14 @@
             <ins title="nlp 2.00">ἔπειτα τί ἐστιν ἀπόφασις</ins>
           </span>
         </span>
-        <span id="w_12" class="ocr_word" title="bbox 1287 198 1364 238" lang="grc">
+        <span id="w_12_0" class="ocr_word" title="bbox 1287 198 1364 238">
           <span class="alternatives">
-            <ins title="nlp 2.00">χαὶ</ins>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_13" class="ocr_word" title="bbox 1394 212 1674 252" lang="grc">
+        <span id="w_12_1" class="ocr_word" title="bbox 1287 198 1364 238">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κατάφασις.</ins>
-          </span>
-        </span>
-        <span id="w_14" class="ocr_word" title="bbox 1711 213 1871 243" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">χἰχότως τὸ ὄνομα</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -170,7 +165,7 @@
         </span>
         <span id="w_29" class="ocr_word" title="bbox 633 349 706 373" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τῶν</ins>
+            <ins title="nlp 2.00">των</ins>
           </span>
         </span>
         <span id="w_30" class="ocr_word" title="bbox 740 349 964 387" lang="grc">
@@ -242,12 +237,7 @@
         </span>
         <span id="w_46" class="ocr_word" title="bbox 1326 405 1442 456" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λόγου</ins>
-          </span>
-        </span>
-        <span id="w_47" class="ocr_word" title="bbox 1457 417 1465 452">
-          <span class="alternatives">
-            <ins title="nlp 2.00">;</ins>
+            <ins class="alt" title="nlp 2.00">λόγου;</ins>
           </span>
         </span>
         <span id="w_48" class="ocr_word" title="bbox 1509 418 1635 457" lang="grc">
@@ -379,9 +369,9 @@
             <ins class="alt" title="nlp 1.00">διαλέγεσθαι,</ins>
           </span>
         </span>
-        <span id="w_73" class="ocr_word" title="bbox 1933 557 2084 596" lang="grc">
+        <span id="w_73_0" class="ocr_word" title="bbox 1933 557 2084 596">
           <span class="alternatives">
-            <ins title="nlp 2.00">πρώτον</ins>
+            <ins class="alt" title="nlp 2.00">πρῶτον</ins>
           </span>
         </span>
       </span>
@@ -517,7 +507,7 @@
         </span>
         <span id="w_99" class="ocr_word" title="bbox 512 760 581 799" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἰῆς</ins>
+            <ins title="nlp 2.00">τῆς</ins>
           </span>
         </span>
         <span id="w_100" class="ocr_word" title="bbox 617 760 871 800" lang="grc">
@@ -599,7 +589,7 @@
         </span>
         <span id="w_115" class="ocr_word" title="bbox 1387 830 1454 854" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοὐ</ins>
+            <ins title="nlp 2.00">τοῦ</ins>
           </span>
         </span>
         <span id="w_116" class="ocr_word" title="bbox 1487 814 1525 854" lang="grc">
@@ -621,7 +611,7 @@
       <span class="ocr_line" title="bbox 530 879 2084 939">
         <span id="w_119" class="ocr_word" title="bbox 530 879 608 923">
           <span class="alternatives">
-            <ins title="nlp 2.00">(??)Οτι</ins>
+            <ins title="nlp 2.00">Οτι</ins>
           </span>
         </span>
         <span id="w_120" class="ocr_word" title="bbox 641 898 709 936" lang="grc">
@@ -1341,9 +1331,9 @@
             <ins class="alt" title="nlp 1.00">δέχονται</ins>
           </span>
         </span>
-        <span id="w_260" class="ocr_word" title="bbox 1894 1638 2084 1692" lang="grc">
+        <span id="w_260_0" class="ocr_word" title="bbox 1894 1638 2084 1692">
           <span class="alternatives">
-            <ins title="nlp 2.00">(χαλεῖται</ins>
+            <ins class="alt" title="nlp 2.00">(καλεῖται</ins>
           </span>
         </span>
       </span>
@@ -1993,9 +1983,14 @@
             <ins class="alt" title="nlp 1.00">ὁ</ins>
           </span>
         </span>
-        <span id="w_389" class="ocr_word" title="bbox 1294 2392 1550 2446" lang="grc">
+        <span id="w_389_0" class="ocr_word" title="bbox 1294 2392 1550 2446">
           <span class="alternatives">
-            <ins title="nlp 2.00">’ Ἀλέξανδρος</ins>
+            <ins class="alt" title="nlp 2.00">Ἀλέξανδρος</ins>
+          </span>
+        </span>
+        <span id="w_389_1" class="ocr_word" title="bbox 1294 2392 1550 2446">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_390" class="ocr_word" title="bbox 1589 2392 1811 2446" lang="grc">
@@ -2006,11 +2001,6 @@
         <span id="w_391" class="ocr_word" title="bbox 1888 2396 2001 2447" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἡμεῖς</ins>
-          </span>
-        </span>
-        <span id="w_392" class="ocr_word" title="bbox 2041 2409 2083 2433" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">δὲ</ins>
           </span>
         </span>
       </span>
@@ -2052,7 +2042,7 @@
         </span>
         <span id="w_400" class="ocr_word" title="bbox 2007 2465 2082 2502" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἴων</ins>
+            <ins title="nlp 2.00">τῶν</ins>
           </span>
         </span>
       </span>
@@ -2294,9 +2284,9 @@
             <ins class="alt" title="nlp 1.00">ψυχῇ</ins>
           </span>
         </span>
-        <span id="w_447" class="ocr_word" title="bbox 1959 2735 2083 2790">
+        <span id="w_447_0" class="ocr_word" title="bbox 1959 2735 2083 2790">
           <span class="alternatives">
-            <ins title="nlp 2.00">παθημάτων’</ins>
+            <ins class="alt" title="nlp 2.00">παθημάτων᾿,</ins>
           </span>
         </span>
       </span>
@@ -2356,8 +2346,7 @@
         </span>
         <span id="w_459" class="ocr_word" title="bbox 1077 2971 1170 3011">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">(aute</ins>
-            <del title="nlp 0.90">(aute</del>
+            <ins title="nlp 2.00">(ante</ins>
           </span>
         </span>
         <span id="w_460" class="ocr_word" title="bbox 1196 2970 1374 3015" lang="grc">
@@ -2367,12 +2356,7 @@
         </span>
         <span id="w_461" class="ocr_word" title="bbox 1402 2969 1525 3013">
           <span class="alternatives">
-            <ins title="nlp 2.00">scripsi</ins>
-          </span>
-        </span>
-        <span id="w_462" class="ocr_word" title="bbox 1537 2981 1543 3002">
-          <span class="alternatives">
-            <ins title="nlp 2.00">:</ins>
+            <ins title="nlp 2.00">scripsi:</ins>
           </span>
         </span>
         <span id="w_463" class="ocr_word" title="bbox 1571 2979 1768 3014" lang="grc">
@@ -2393,8 +2377,7 @@
         </span>
         <span id="w_466" class="ocr_word" title="bbox 2005 2981 2053 3002">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">oti</ins>
-            <del title="nlp 0.90">oti</del>
+            <ins title="nlp 2.00">ὅτι</ins>
           </span>
         </span>
         <span id="w_467" class="ocr_word" title="bbox 2079 2968 2153 3013">
@@ -2424,13 +2407,7 @@
         </span>
         <span id="w_471" class="ocr_word" title="bbox 678 3028 717 3061">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">14</ins>
-          </span>
-        </span>
-        <span id="w_472" class="ocr_word" title="bbox 727 3037 739 3053">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">r</ins>
-            <del title="nlp 0.90">r</del>
+            <ins class="alt" title="nlp 2.00">14r</ins>
           </span>
         </span>
         <span id="w_473" class="ocr_word" title="bbox 856 3027 900 3061">
@@ -2574,8 +2551,7 @@
       <span class="ocr_line" title="bbox 345 3142 2154 3191">
         <span id="w_499" class="ocr_word" title="bbox 345 3145 505 3178">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Ammou.</ins>
-            <del title="nlp 0.90">Ammou.</del>
+            <ins title="nlp 2.00">Ammon.</ins>
           </span>
         </span>
         <span id="w_500" class="ocr_word" title="bbox 523 3145 580 3178">
@@ -2644,8 +2620,7 @@
         </span>
         <span id="w_513" class="ocr_word" title="bbox 1837 3144 1996 3177">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Aiumou.</ins>
-            <del title="nlp 0.90">Aiumou.</del>
+            <ins title="nlp 2.00">Ammon.</ins>
           </span>
         </span>
         <span id="w_514" class="ocr_word" title="bbox 2014 3142 2071 3176">
