--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0514.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0514.html
@@ -1051,16 +1051,11 @@
         </span>
         <span id="w_201" class="ocr_word" title="bbox 1973 1449 2075 1486" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὁμώ-</ins>
+            <ins title="nlp 2.00">ὁμώνυμος</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 386 1500 2073 1557">
-        <span id="w_202" class="ocr_word" title="bbox 386 1521 500 1550" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">νυμος</ins>
-          </span>
-        </span>
         <span id="w_203" class="ocr_word" title="bbox 523 1521 568 1545" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οὐ</ins>
@@ -1101,19 +1096,19 @@
             <ins class="alt" title="nlp 1.00">εἴπω</ins>
           </span>
         </span>
-        <span id="w_211" class="ocr_word" title="bbox 1688 1500 1696 1515" lang="grc">
+        <span id="w_211_0" class="ocr_word" title="bbox 1688 1500 1696 1515">
           <span class="alternatives">
-            <ins title="nlp 2.00">῾κύων᾿,</ins>
+            <ins class="alt" title="nlp 2.00">῾κύων᾿,</ins>
+          </span>
+        </span>
+        <span id="w_211_1" class="ocr_word" title="bbox 1688 1500 1696 1515">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_212" class="ocr_word" title="bbox 1879 1504 1986 1555" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δηλῶ</ins>
-          </span>
-        </span>
-        <span id="w_213" class="ocr_word" title="bbox 2010 1518 2073 1542" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸν</ins>
           </span>
         </span>
       </span>
@@ -1170,7 +1165,7 @@
         </span>
         <span id="w_224" class="ocr_word" title="bbox 1885 1571 1930 1625" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἡ</ins>
+            <ins title="nlp 2.00">(ἡ</ins>
           </span>
         </span>
         <span id="w_225" class="ocr_word" title="bbox 1964 1571 2074 1612" lang="grc">
@@ -1242,9 +1237,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 385 1711 2076 1766">
-        <span id="w_238" class="ocr_word" title="bbox 385 1714 477 1753" lang="grc">
+        <span id="w_238_0" class="ocr_word" title="bbox 385 1714 477 1753">
           <span class="alternatives">
-            <ins title="nlp 2.00">ὁμώνυμος</ins>
+            <ins class="alt" title="nlp 2.00">οὐδὲ</ins>
+          </span>
+        </span>
+        <span id="w_238_1" class="ocr_word" title="bbox 385 1714 477 1753">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ὁμώνυμος</ins>
           </span>
         </span>
         <span id="w_239" class="ocr_word" title="bbox 507 1712 715 1766" lang="grc">
@@ -1599,16 +1599,11 @@
         </span>
         <span id="w_307" class="ocr_word" title="bbox 1854 2058 2071 2109" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κατηγορεῖ-</ins>
+            <ins title="nlp 2.00">κατηγορεῖσθαι,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 383 2123 2077 2180">
-        <span id="w_308" class="ocr_word" title="bbox 383 2126 486 2174" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σθαι,</ins>
-          </span>
-        </span>
         <span id="w_309" class="ocr_word" title="bbox 533 2126 648 2180" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">φησὶν</ins>
@@ -1703,7 +1698,7 @@
         </span>
         <span id="w_327" class="ocr_word" title="bbox 1701 2192 1875 2246" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τελείως</ins>
+            <ins title="nlp 2.00">(τελείως</ins>
           </span>
         </span>
         <span id="w_328" class="ocr_word" title="bbox 1904 2208 1946 2233" lang="grc">
@@ -1713,16 +1708,11 @@
         </span>
         <span id="w_329" class="ocr_word" title="bbox 1969 2194 2070 2246" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὁμώ-</ins>
+            <ins title="nlp 2.00">ὁμώνυμος</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 381 2260 2070 2318">
-        <span id="w_330" class="ocr_word" title="bbox 381 2280 497 2318" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">νυμος</ins>
-          </span>
-        </span>
         <span id="w_331" class="ocr_word" title="bbox 527 2279 571 2304" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οὐ</ins>
@@ -2247,19 +2237,19 @@
             <ins class="alt" title="nlp 1.00">ὃν</ins>
           </span>
         </span>
-        <span id="w_429" class="ocr_word" title="bbox 1817 2761 1901 2807" lang="grc">
+        <span id="w_429_0" class="ocr_word" title="bbox 1817 2761 1901 2807">
           <span class="alternatives">
-            <ins title="nlp 2.00">λἐγ.]</ins>
+            <ins class="alt" title="nlp 2.00">λέγ.]</ins>
+          </span>
+        </span>
+        <span id="w_429_1" class="ocr_word" title="bbox 1817 2761 1901 2807">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_430" class="ocr_word" title="bbox 1927 2761 1983 2795" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_431" class="ocr_word" title="bbox 2007 2760 2137 2805" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λέγεται</ins>
           </span>
         </span>
       </span>
@@ -2284,14 +2274,19 @@
             <ins title="nlp 2.00">λέγεται</ins>
           </span>
         </span>
-        <span id="w_436" class="ocr_word" title="bbox 676 2835 712 2855" lang="grc">
+        <span id="w_436_0" class="ocr_word" title="bbox 676 2835 712 2855">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὃν</ins>
+            <ins class="alt" title="nlp 2.00">(καὶ</ins>
+          </span>
+        </span>
+        <span id="w_436_1" class="ocr_word" title="bbox 676 2835 712 2855">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_437" class="ocr_word" title="bbox 740 2824 811 2864" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(καὶ</ins>
+            <ins title="nlp 2.00">καὶ</ins>
           </span>
         </span>
         <span id="w_438" class="ocr_word" title="bbox 840 2823 923 2866">
@@ -2346,22 +2341,16 @@
             <del title="nlp 0.90">colloc.</del>
           </span>
         </span>
-        <span id="w_448" class="ocr_word" title="bbox 2033 2820 2060 2853">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">T</ins>
-            <del title="nlp 0.90">T</del>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 309 2879 1923 2928">
         <span id="w_449" class="ocr_word" title="bbox 309 2881 364 2915" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">21. 22 πρὸς ἀλλ. οἱ φιλ. colloc. K</ins>
+            <ins title="nlp 2.00">πρὸς ἀλλ. οἱ φιλ. colloc. K</ins>
           </span>
         </span>
         <span id="w_450" class="ocr_word" title="bbox 1264 2881 1308 2916" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">23 ὂν] ἓν Τ</ins>
+            <ins title="nlp 2.00">ὂν] ἓν Τ</ins>
           </span>
         </span>
         <span id="w_451" class="ocr_word" title="bbox 1735 2880 1789 2924" lang="grc">
