--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0565.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0565.html
@@ -886,8 +886,7 @@
         </span>
         <span id="w_168" class="ocr_word" title="bbox 280 1220 356 1262">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’Ex</ins>
-            <del title="nlp 0.90">’Ex</del>
+            <ins title="nlp 2.00">Ἐκ</ins>
           </span>
         </span>
         <span id="w_169" class="ocr_word" title="bbox 394 1238 459 1275" lang="grc">
@@ -1389,9 +1388,9 @@
             <ins title="nlp 2.00">ἀλογότητα</ins>
           </span>
         </span>
-        <span id="w_267" class="ocr_word" title="bbox 521 1949 690 2006">
+        <span id="w_267_0" class="ocr_word" title="bbox 521 1949 690 2006">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;εἰπεῖν&amp;#x003E.</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;εἰπεῖν&amp;#x003E;.</ins>
           </span>
         </span>
       </span>
@@ -2222,9 +2221,14 @@
             <del title="nlp 0.90">Paris.</del>
           </span>
         </span>
-        <span id="w_425" class="ocr_word" title="bbox 689 3118 794 3152" lang="grc">
+        <span id="w_425_0" class="ocr_word" title="bbox 689 3118 794 3152">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ι973:</ins>
+            <ins class="alt" title="nlp 2.00">1973:</ins>
+          </span>
+        </span>
+        <span id="w_425_1" class="ocr_word" title="bbox 689 3118 794 3152">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_426" class="ocr_word" title="bbox 822 3128 889 3151">
@@ -2264,17 +2268,16 @@
             <ins class="alt" title="nlp 1.00">θερμὸν</ins>
           </span>
         </span>
-        <span id="w_433" class="ocr_word" title="bbox 1875 3121 1932 3154" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">καὶ</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 111 3172 896 3213">
-        <span id="w_434" class="ocr_word" title="bbox 111 3172 230 3208">
+        <span id="w_434_0" class="ocr_word" title="bbox 111 3172 230 3208">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Xeuxov</ins>
-            <del title="nlp 0.90">Xeuxov</del>
+            <ins class="alt" title="nlp 2.00">λευκὸν</ins>
+          </span>
+        </span>
+        <span id="w_434_1" class="ocr_word" title="bbox 111 3172 230 3208">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_435" class="ocr_word" title="bbox 256 3175 377 3209">
@@ -2303,12 +2306,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">om.</ins>
             <del title="nlp 0.90">om.</del>
-          </span>
-        </span>
-        <span id="w_440" class="ocr_word" title="bbox 869 3177 896 3209">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">T</ins>
-            <del title="nlp 0.90">T</del>
           </span>
         </span>
       </span>
