--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0515.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0515.html
@@ -384,16 +384,11 @@
         </span>
         <span id="w_72" class="ocr_word" title="bbox 1673 552 1855 592" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">συμπερι-</ins>
+            <ins title="nlp 2.00">συμπεριλαμβάνοντες,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 176 605 1856 665">
-        <span id="w_73" class="ocr_word" title="bbox 176 611 450 665" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λαμβάνοντες,</ins>
-          </span>
-        </span>
         <span id="w_74" class="ocr_word" title="bbox 481 610 583 662" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">λέγω</ins>
@@ -716,7 +711,7 @@
         </span>
         <span id="w_136" class="ocr_word" title="bbox 991 950 1077 1003" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὴν</ins>
+            <ins title="nlp 2.00">(τὴν</ins>
           </span>
         </span>
         <span id="w_137" class="ocr_word" title="bbox 1100 950 1171 1004" lang="grc">
@@ -813,16 +808,11 @@
         </span>
         <span id="w_156" class="ocr_word" title="bbox 1778 1018 1858 1058" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">διά-</ins>
+            <ins title="nlp 2.00">διάφορος·</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 178 1087 1856 1148">
-        <span id="w_157" class="ocr_word" title="bbox 178 1108 313 1148" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φορος·</ins>
-          </span>
-        </span>
         <span id="w_158" class="ocr_word" title="bbox 347 1109 393 1132" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὰ</ins>
@@ -957,16 +947,11 @@
         </span>
         <span id="w_184" class="ocr_word" title="bbox 1747 1171 1858 1208" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὑγιει-</ins>
+            <ins title="nlp 2.00">ὑγιεινὸν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 179 1224 1917 1286">
-        <span id="w_185" class="ocr_word" title="bbox 179 1233 242 1272" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">νὸν</ins>
-          </span>
-        </span>
         <span id="w_186" class="ocr_word" title="bbox 268 1231 431 1286" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">βιβλίον·</ins>
@@ -1004,12 +989,7 @@
         </span>
         <span id="w_193" class="ocr_word" title="bbox 1139 1226 1214 1266" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀπὸ</ins>
-          </span>
-        </span>
-        <span id="w_194" class="ocr_word" title="bbox 1232 1224 1235 1282" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">τῆς</ins>
+            <ins title="nlp 2.00">ἀπὸ|τῆς</ins>
           </span>
         </span>
         <span id="w_195" class="ocr_word" title="bbox 1340 1226 1463 1279" lang="grc">
@@ -1027,9 +1007,9 @@
             <ins class="alt" title="nlp 1.00">ἀλλὰ</ins>
           </span>
         </span>
-        <span id="w_198" class="ocr_word" title="bbox 1836 1229 1917 1266" lang="grc">
+        <span id="w_198_0" class="ocr_word" title="bbox 1836 1229 1917 1266">
           <span class="alternatives">
-            <ins title="nlp 2.00">193ν</ins>
+            <ins class="alt" title="nlp 2.00">193v</ins>
           </span>
         </span>
       </span>
@@ -1704,16 +1684,11 @@
         </span>
         <span id="w_330" class="ocr_word" title="bbox 1750 1927 1864 1952" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πεπε-</ins>
+            <ins title="nlp 2.00">πεπερασμένον</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 185 1981 1865 2046">
-        <span id="w_331" class="ocr_word" title="bbox 185 2005 372 2046" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ρασμένον</ins>
-          </span>
-        </span>
         <span id="w_332" class="ocr_word" title="bbox 405 1989 616 2043" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀπέραντον</ins>
@@ -1890,7 +1865,7 @@
         </span>
         <span id="w_366" class="ocr_word" title="bbox 1791 2134 1863 2159" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ποῦ</ins>
+            <ins title="nlp 2.00">που</ins>
           </span>
         </span>
       </span>
