--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0566.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0566.html
@@ -244,9 +244,9 @@
             <ins class="alt" title="nlp 1.00">τῶν</ins>
           </span>
         </span>
-        <span id="w_45" class="ocr_word" title="bbox 1978 342 2092 381" lang="grc">
+        <span id="w_45_0" class="ocr_word" title="bbox 1978 342 2092 381">
           <span class="alternatives">
-            <ins title="nlp 2.00">καθολιχῶν</ins>
+            <ins class="alt" title="nlp 2.00">καθολικῶν</ins>
           </span>
         </span>
       </span>
@@ -315,7 +315,7 @@
       <span class="ocr_line" title="bbox 359 479 2091 533">
         <span id="w_59" class="ocr_word" title="bbox 359 493 378 524">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">6</ins>
+            <ins title="nlp 2.00">5</ins>
           </span>
         </span>
         <span id="w_60" class="ocr_word" title="bbox 407 479 537 523" lang="grc">
@@ -675,9 +675,14 @@
             <ins class="alt" title="nlp 1.00">λέγει</ins>
           </span>
         </span>
-        <span id="w_130" class="ocr_word" title="bbox 533 894 541 909" lang="grc">
+        <span id="w_130_0" class="ocr_word" title="bbox 533 894 541 909">
           <span class="alternatives">
-            <ins title="nlp 2.00">῾ἅτιν’</ins>
+            <ins class="alt" title="nlp 2.00">῾ἅτιγ᾿</ins>
+          </span>
+        </span>
+        <span id="w_130_1" class="ocr_word" title="bbox 533 894 541 909">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ἂν</ins>
           </span>
         </span>
         <span id="w_131" class="ocr_word" title="bbox 679 911 724 935" lang="grc">
@@ -2353,8 +2358,7 @@
         </span>
         <span id="w_454" class="ocr_word" title="bbox 1174 2898 1192 2931">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">G</ins>
-            <del title="nlp 0.90">G</del>
+            <ins title="nlp 2.00">6</ins>
           </span>
         </span>
         <span id="w_455" class="ocr_word" title="bbox 1219 2901 1316 2944" lang="grc">
@@ -2503,8 +2507,7 @@
         </span>
         <span id="w_482" class="ocr_word" title="bbox 1336 3028 1402 3051">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">otn.</ins>
-            <del title="nlp 0.90">otn.</del>
+            <ins title="nlp 2.00">om.</ins>
           </span>
         </span>
         <span id="w_483" class="ocr_word" title="bbox 1430 3017 1459 3049" lang="grc">
