--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0516.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0516.html
@@ -303,9 +303,9 @@
             <ins class="alt" title="nlp 1.00">φύσει</ins>
           </span>
         </span>
-        <span id="w_55" class="ocr_word" title="bbox 2017 425 2131 448" lang="grc">
+        <span id="w_55_0" class="ocr_word" title="bbox 2017 425 2131 448">
           <span class="alternatives">
-            <ins title="nlp 2.00">πεπερανται</ins>
+            <ins class="alt" title="nlp 2.00">πεπέρανται</ins>
           </span>
         </span>
       </span>
@@ -362,7 +362,7 @@
         </span>
         <span id="w_67" class="ocr_word" title="bbox 1727 476 1790 531" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸ</ins>
+            <ins title="nlp 2.00">(τὸ</ins>
           </span>
         </span>
         <span id="w_68" class="ocr_word" title="bbox 1821 493 1911 531" lang="grc">
@@ -523,7 +523,7 @@
         </span>
         <span id="w_100" class="ocr_word" title="bbox 933 684 1105 738" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πάντως</ins>
+            <ins title="nlp 2.00">(πάντως</ins>
           </span>
         </span>
         <span id="w_101" class="ocr_word" title="bbox 1135 700 1206 738" lang="grc">
@@ -558,16 +558,11 @@
         </span>
         <span id="w_107" class="ocr_word" title="bbox 1972 700 2131 739" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πεπερα-</ins>
+            <ins title="nlp 2.00">πεπερασμένῳ</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 441 753 2131 808">
-        <span id="w_108" class="ocr_word" title="bbox 441 768 571 794" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σμένῳ</ins>
-          </span>
-        </span>
         <span id="w_109" class="ocr_word" title="bbox 604 770 708 805" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὄντα,</ins>
@@ -969,7 +964,7 @@
         </span>
         <span id="w_188" class="ocr_word" title="bbox 1353 1385 1435 1429" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κα.</ins>
+            <ins title="nlp 2.00">κα΄.</ins>
           </span>
         </span>
       </span>
@@ -1534,16 +1529,11 @@
         </span>
         <span id="w_299" class="ocr_word" title="bbox 2013 2137 2133 2190" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀγνώ-</ins>
+            <ins title="nlp 2.00">ἀγνώστων</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 443 2206 2132 2260">
-        <span id="w_300" class="ocr_word" title="bbox 443 2220 544 2247" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">στων</ins>
-          </span>
-        </span>
         <span id="w_301" class="ocr_word" title="bbox 575 2221 619 2246" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οὐ</ins>
@@ -1713,9 +1703,14 @@
             <ins title="nlp 2.00">καθολ.</ins>
           </span>
         </span>
-        <span id="w_334" class="ocr_word" title="bbox 1539 2480 1686 2523" lang="grc">
+        <span id="w_334_0" class="ocr_word" title="bbox 1539 2480 1686 2523">
           <span class="alternatives">
-            <ins title="nlp 2.00">(καθωλ.</ins>
+            <ins class="alt" title="nlp 2.00">(καθωλ.</ins>
+          </span>
+        </span>
+        <span id="w_334_1" class="ocr_word" title="bbox 1539 2480 1686 2523">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_335" class="ocr_word" title="bbox 1714 2482 1777 2525">
@@ -1731,11 +1726,6 @@
         <span id="w_337" class="ocr_word" title="bbox 1996 2484 2076 2525">
           <span class="alternatives">
             <ins title="nlp 2.00">post</ins>
-          </span>
-        </span>
-        <span id="w_338" class="ocr_word" title="bbox 2101 2483 2206 2515" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ταῦτα</ins>
           </span>
         </span>
       </span>
@@ -1761,9 +1751,14 @@
             <ins class="alt" title="nlp 1.00">ἐστὶ</ins>
           </span>
         </span>
-        <span id="w_343" class="ocr_word" title="bbox 786 2541 861 2584" lang="grc">
+        <span id="w_343_0" class="ocr_word" title="bbox 786 2541 861 2584">
           <span class="alternatives">
-            <ins title="nlp 2.00">(εἰσὶ</ins>
+            <ins class="alt" title="nlp 2.00">(εἰσὶ</ins>
+          </span>
+        </span>
+        <span id="w_343_1" class="ocr_word" title="bbox 786 2541 861 2584">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_344" class="ocr_word" title="bbox 887 2541 933 2585">
@@ -1823,12 +1818,6 @@
         <span id="w_354" class="ocr_word" title="bbox 1972 2541 1996 2581">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">1)</ins>
-          </span>
-        </span>
-        <span id="w_355" class="ocr_word" title="bbox 2023 2540 2050 2573">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">T</ins>
-            <del title="nlp 0.90">T</del>
           </span>
         </span>
       </span>
