--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0607.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0607.html
@@ -142,12 +142,6 @@
             <ins title="nlp 2.00">τὰ</ins>
           </span>
         </span>
-        <span id="w_24" class="ocr_word" title="bbox 1836 237 1852 260">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">f.</ins>
-            <del title="nlp 0.90">f.</del>
-          </span>
-        </span>
         <span id="w_25" class="ocr_word" title="bbox 1863 234 1914 261">
           <span class="alternatives">
             <ins title="nlp 2.00">f. 38v</ins>
@@ -1005,14 +999,14 @@
             <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_193" class="ocr_word" title="bbox 1552 1313 1628 1367">
+        <span id="w_193_0" class="ocr_word" title="bbox 1552 1313 1628 1367">
           <span class="alternatives">
-            <ins title="nlp 2.00">&lt;δὲ&gt;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;δὲ&amp;#x003E;</ins>
           </span>
         </span>
-        <span id="w_194" class="ocr_word" title="bbox 1660 1316 1848 1367" lang="grc">
+        <span id="w_193_1" class="ocr_word" title="bbox 1552 1313 1628 1367">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">στοιχεῖον</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1568,16 +1562,11 @@
         </span>
         <span id="w_303" class="ocr_word" title="bbox 1798 2009 1850 2036" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐξ-</ins>
+            <ins title="nlp 2.00">ἐξαγγέλλουσι</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 196 2060 1851 2128">
-        <span id="w_304" class="ocr_word" title="bbox 196 2076 419 2128" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">αγγέλλουσι</ins>
-          </span>
-        </span>
         <span id="w_305" class="ocr_word" title="bbox 452 2087 518 2125" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">μὲν</ins>
@@ -1618,14 +1607,14 @@
             <ins class="alt" title="nlp 1.00">φωνῶν</ins>
           </span>
         </span>
-        <span id="w_313" class="ocr_word" title="bbox 1648 2060 1746 2116">
+        <span id="w_313_0" class="ocr_word" title="bbox 1648 2060 1746 2116">
           <span class="alternatives">
-            <ins title="nlp 2.00">&lt;χαὶ&gt;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;καὶ&amp;#x003E;</ins>
           </span>
         </span>
-        <span id="w_314" class="ocr_word" title="bbox 1776 2063 1851 2100" lang="grc">
+        <span id="w_313_1" class="ocr_word" title="bbox 1648 2060 1746 2116">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τῶν</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -2196,7 +2185,7 @@
         </span>
         <span id="w_425" class="ocr_word" title="bbox 1777 2758 1855 2782" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">ονο-</ins>
+            <ins title="nlp 2.00">ονοὁ</ins>
           </span>
         </span>
       </span>
@@ -2216,9 +2205,14 @@
             <ins class="alt" title="nlp 1.00">ποιητής]</ins>
           </span>
         </span>
-        <span id="w_429" class="ocr_word" title="bbox 400 2905 438 2938">
+        <span id="w_429_0" class="ocr_word" title="bbox 400 2905 438 2938">
           <span class="alternatives">
-            <ins title="nlp 2.00">ΙΙ</ins>
+            <ins class="alt" title="nlp 2.00">II.</ins>
+          </span>
+        </span>
+        <span id="w_429_1" class="ocr_word" title="bbox 400 2905 438 2938">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_430" class="ocr_word" title="bbox 457 2903 485 2938" lang="grc">
@@ -2277,11 +2271,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">cf.</ins>
             <del title="nlp 0.90">cf.</del>
-          </span>
-        </span>
-        <span id="w_442" class="ocr_word" title="bbox 1844 2889 1925 2921">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Ammon.</ins>
           </span>
         </span>
       </span>
