--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0568.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0568.html
@@ -217,9 +217,14 @@
             <ins title="nlp 2.00">καὶ τὸ εἶδος καὶ τὸ</ins>
           </span>
         </span>
-        <span id="w_37_0" class="ocr_word" title="bbox 1332 509 1448 549">
+        <span id="w_37_0_0" class="ocr_word" title="bbox 1332 509 1448 549">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">ἴθιον</ins>
+            <ins class="alt" title="nlp 2.00">ἴδιον</ins>
+          </span>
+        </span>
+        <span id="w_37_0_1" class="ocr_word" title="bbox 1332 509 1448 549">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_37_1" class="ocr_word" title="bbox 1332 509 1448 549">
@@ -230,11 +235,6 @@
         <span id="w_38_0" class="ocr_word" title="bbox 1481 525 1554 549">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">τὸ</ins>
-          </span>
-        </span>
-        <span id="w_38_1" class="ocr_word" title="bbox 1481 525 1554 549">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">συμβεβηκός.</ins>
           </span>
         </span>
       </span>
@@ -913,9 +913,14 @@
             <ins class="alt" title="nlp 1.00">λαμβάνειν,</ins>
           </span>
         </span>
-        <span id="w_167_0" class="ocr_word" title="bbox 1378 1896 1449 1926">
+        <span id="w_167_0_0" class="ocr_word" title="bbox 1378 1896 1449 1926">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">αἶς</ins>
+            <ins class="alt" title="nlp 2.00">αἷς</ins>
+          </span>
+        </span>
+        <span id="w_167_0_1" class="ocr_word" title="bbox 1378 1896 1449 1926">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_167_1" class="ocr_word" title="bbox 1378 1896 1449 1926">
@@ -926,11 +931,6 @@
         <span id="w_168" class="ocr_word" title="bbox 1732 1896 1780 1920" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸ</ins>
-          </span>
-        </span>
-        <span id="w_169" class="ocr_word" title="bbox 1811 1896 1956 1934" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γένος.</ins>
           </span>
         </span>
       </span>
@@ -1222,14 +1222,14 @@
             <ins class="alt" title="nlp 1.00">εἶδος,</ins>
           </span>
         </span>
-        <span id="w_225_0" class="ocr_word" title="bbox 1713 2554 1812 2595">
+        <span id="w_225_0_0" class="ocr_word" title="bbox 1713 2554 1812 2595">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">οἶον</ins>
+            <ins class="alt" title="nlp 2.00">οἷον</ins>
           </span>
         </span>
-        <span id="w_225_1" class="ocr_word" title="bbox 1713 2554 1812 2595">
+        <span id="w_225_0_1" class="ocr_word" title="bbox 1713 2554 1812 2595">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">ἀνθρώπου</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1616,12 +1616,7 @@
         </span>
         <span id="w_300" class="ocr_word" title="bbox 1366 3134 1376 3165">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">1</ins>
-          </span>
-        </span>
-        <span id="w_301" class="ocr_word" title="bbox 1390 3133 1402 3165">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">1</ins>
+            <ins class="alt" title="nlp 2.00">11</ins>
           </span>
         </span>
         <span id="w_302" class="ocr_word" title="bbox 1439 3133 1521 3178" lang="grc">
