--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0656.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0656.html
@@ -29,8 +29,7 @@
         </span>
         <span id="w_3" class="ocr_word" title="bbox 942 101 978 133">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">I-.</ins>
-            <del title="nlp 0.90">I-.</del>
+            <ins title="nlp 2.00">L.</ins>
           </span>
         </span>
         <span id="w_4" class="ocr_word" title="bbox 1008 100 1064 132">
@@ -40,8 +39,7 @@
         </span>
         <span id="w_5" class="ocr_word" title="bbox 1094 99 1522 132">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">INTEKIMtETATIONE</ins>
-            <del title="nlp 0.90">INTEKIMtETATIONE</del>
+            <ins title="nlp 2.00">INTERPRETATIONE</ins>
           </span>
         </span>
         <span id="w_6" class="ocr_word" title="bbox 1550 98 1672 139">
@@ -62,9 +60,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 421 283 2087 338">
-        <span id="w_9" class="ocr_word" title="bbox 421 301 527 328" lang="grc">
+        <span id="w_9_0" class="ocr_word" title="bbox 421 301 527 328">
           <span class="alternatives">
-            <ins title="nlp 2.00">σεταθ</ins>
+            <ins class="alt" title="nlp 2.00">σεται</ins>
+          </span>
+        </span>
+        <span id="w_9_1" class="ocr_word" title="bbox 421 301 527 328">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_10" class="ocr_word" title="bbox 565 301 632 328" lang="grc">
@@ -105,11 +108,6 @@
         <span id="w_17" class="ocr_word" title="bbox 1558 283 1781 322" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">προτάσεων</ins>
-          </span>
-        </span>
-        <span id="w_18" class="ocr_word" title="bbox 1823 295 2087 335" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀντιστροφῆς.</ins>
           </span>
         </span>
       </span>
@@ -176,16 +174,11 @@
         </span>
         <span id="w_31" class="ocr_word" title="bbox 2003 365 2091 403" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">προ-</ins>
+            <ins title="nlp 2.00">προτάσεων,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 421 419 2090 475">
-        <span id="w_32" class="ocr_word" title="bbox 421 439 588 473" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τάσεων,</ins>
-          </span>
-        </span>
         <span id="w_33" class="ocr_word" title="bbox 627 439 680 463" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὡς</ins>
@@ -498,12 +491,7 @@
         </span>
         <span id="w_94" class="ocr_word" title="bbox 799 777 899 804" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐστιν</ins>
-          </span>
-        </span>
-        <span id="w_95" class="ocr_word" title="bbox 912 762 921 776">
-          <span class="alternatives">
-            <ins title="nlp 2.00">’</ins>
+            <ins class="alt" title="nlp 2.00">ἐστιν’</ins>
           </span>
         </span>
         <span id="w_96" class="ocr_word" title="bbox 959 779 983 816" lang="grc">
@@ -605,16 +593,11 @@
         </span>
         <span id="w_115" class="ocr_word" title="bbox 2021 843 2095 867" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοι-</ins>
+            <ins title="nlp 2.00">τοιαύτην</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 425 900 2095 958">
-        <span id="w_116" class="ocr_word" title="bbox 425 919 542 958" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">αύτην</ins>
-          </span>
-        </span>
         <span id="w_117" class="ocr_word" title="bbox 574 916 753 957" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πρότασιν</ins>
@@ -692,14 +675,14 @@
             <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_132" class="ocr_word" title="bbox 981 985 1006 1009">
+        <span id="w_132_0" class="ocr_word" title="bbox 981 985 1006 1009">
           <span class="alternatives">
-            <ins title="nlp 2.00">α &amp;#x772;</ins>
+            <ins class="alt" title="nlp 2.00">ᾱ</ins>
           </span>
         </span>
-        <span id="w_133" class="ocr_word" title="bbox 1036 969 1258 1008" lang="grc">
+        <span id="w_132_1" class="ocr_word" title="bbox 981 985 1006 1009">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κεφάλαιον.</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -786,19 +769,19 @@
             <ins class="alt" title="nlp 1.00">προτάσεων</ins>
           </span>
         </span>
-        <span id="w_150" class="ocr_word" title="bbox 1699 1118 1796 1150" lang="grc">
+        <span id="w_150_0" class="ocr_word" title="bbox 1699 1118 1796 1150">
           <span class="alternatives">
-            <ins title="nlp 2.00">ασος &amp;#x772;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x772;α&amp;#x772;σ&amp;#x772;ο&amp;#x772;ς</ins>
+          </span>
+        </span>
+        <span id="w_150_1" class="ocr_word" title="bbox 1699 1118 1796 1150">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_151" class="ocr_word" title="bbox 1826 1103 1888 1143" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">διὰ</ins>
-          </span>
-        </span>
-        <span id="w_152" class="ocr_word" title="bbox 1919 1118 2096 1156" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοιαύτην</ins>
           </span>
         </span>
       </span>
@@ -979,14 +962,19 @@
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
-        <span id="w_188" class="ocr_word" title="bbox 526 1382 796 1437" lang="grc">
+        <span id="w_188_0" class="ocr_word" title="bbox 526 1382 796 1437">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C; ὑποκειμένου καὶ&amp;#x003E; </ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;ὑποκειμένου</ins>
+          </span>
+        </span>
+        <span id="w_188_1" class="ocr_word" title="bbox 526 1382 796 1437">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">καὶ&amp;#x003E;</ins>
           </span>
         </span>
         <span id="w_189" class="ocr_word" title="bbox 827 1380 908 1435" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00"> κατηγορουμένου</ins>
+            <ins title="nlp 2.00">κατηγορουμένου</ins>
           </span>
         </span>
         <span id="w_190" class="ocr_word" title="bbox 1308 1381 1370 1420" lang="grc">
@@ -1973,19 +1961,19 @@
             <ins class="alt" title="nlp 1.00">μὲν</ins>
           </span>
         </span>
-        <span id="w_383" class="ocr_word" title="bbox 1764 2561 1789 2585">
+        <span id="w_383_0" class="ocr_word" title="bbox 1764 2561 1789 2585">
           <span class="alternatives">
-            <ins title="nlp 2.00">α &amp;#x772;</ins>
+            <ins class="alt" title="nlp 2.00">ᾱ</ins>
           </span>
         </span>
-        <span id="w_384" class="ocr_word" title="bbox 1828 2558 2039 2599" lang="grc">
+        <span id="w_383_1" class="ocr_word" title="bbox 1764 2561 1789 2585">
           <span class="alternatives">
-            <ins title="nlp 2.00">ὡρισμένος</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
-        <span id="w_385" class="ocr_word" title="bbox 2075 2560 2109 2584">
+        <span id="w_384_0" class="ocr_word" title="bbox 1828 2558 2039 2599">
           <span class="alternatives">
-            <ins title="nlp 2.00">οί</ins>
+            <ins class="alt" title="nlp 2.00">ὡρισμένος</ins>
           </span>
         </span>
       </span>
@@ -2035,9 +2023,14 @@
             <ins class="alt" title="nlp 1.00">μὲν</ins>
           </span>
         </span>
-        <span id="w_395" class="ocr_word" title="bbox 1576 2631 1600 2655">
+        <span id="w_395_0" class="ocr_word" title="bbox 1576 2631 1600 2655">
           <span class="alternatives">
-            <ins title="nlp 2.00">α &amp;#x772;</ins>
+            <ins class="alt" title="nlp 2.00">ᾱ</ins>
+          </span>
+        </span>
+        <span id="w_395_1" class="ocr_word" title="bbox 1576 2631 1600 2655">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_396" class="ocr_word" title="bbox 1636 2615 1812 2668" lang="grc">
@@ -2055,16 +2048,16 @@
             <ins class="alt" title="nlp 1.00">δὲ</ins>
           </span>
         </span>
-        <span id="w_399" class="ocr_word" title="bbox 1988 2615 2111 2652">
-          <span class="alternatives">
-            <ins title="nlp 2.00">τελευταῖοι</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 444 2682 2112 2740">
-        <span id="w_400" class="ocr_word" title="bbox 444 2701 542 2726" lang="grc">
+        <span id="w_400_0" class="ocr_word" title="bbox 444 2701 542 2726">
           <span class="alternatives">
-            <ins title="nlp 2.00">β &amp;#x772;</ins>
+            <ins class="alt" title="nlp 2.00">#x772;β</ins>
+          </span>
+        </span>
+        <span id="w_400_1" class="ocr_word" title="bbox 444 2701 542 2726">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_401" class="ocr_word" title="bbox 625 2687 843 2740" lang="grc">
@@ -2092,24 +2085,19 @@
             <ins class="alt" title="nlp 1.00">τούτων</ins>
           </span>
         </span>
-        <span id="w_406" class="ocr_word" title="bbox 1538 2699 1593 2723" lang="grc">
+        <span id="w_406_0" class="ocr_word" title="bbox 1538 2699 1593 2723">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τῷ</ins>
+            <ins class="alt" title="nlp 2.00">τῷ</ins>
           </span>
         </span>
-        <span id="w_407" class="ocr_word" title="bbox 1621 2683 1846 2738" lang="grc">
+        <span id="w_406_1" class="ocr_word" title="bbox 1538 2699 1593 2723">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">βουλομένῳ</ins>
+            <ins class="alt" title="nlp 2.00">βουλομένῳ</ins>
           </span>
         </span>
-        <span id="w_408_0" class="ocr_word" title="bbox 1877 2682 2019 2736">
+        <span id="w_407_0" class="ocr_word" title="bbox 1621 2683 1846 2738">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">γράψαι</ins>
-          </span>
-        </span>
-        <span id="w_408_1" class="ocr_word" title="bbox 1877 2682 2019 2736">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">σαθέστατα.</ins>
           </span>
         </span>
       </span>
@@ -2320,13 +2308,7 @@
         </span>
         <span id="w_450" class="ocr_word" title="bbox 1103 3038 1166 3072">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">172</ins>
-          </span>
-        </span>
-        <span id="w_451" class="ocr_word" title="bbox 1175 3049 1191 3064">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">v</ins>
-            <del title="nlp 0.90">v</del>
+            <ins class="alt" title="nlp 2.00">172v</ins>
           </span>
         </span>
         <span id="w_452" class="ocr_word" title="bbox 1334 3038 1357 3070">
@@ -2341,12 +2323,7 @@
         </span>
         <span id="w_454" class="ocr_word" title="bbox 1625 3036 1748 3079">
           <span class="alternatives">
-            <ins title="nlp 2.00">scripsi</ins>
-          </span>
-        </span>
-        <span id="w_455" class="ocr_word" title="bbox 1760 3049 1766 3067">
-          <span class="alternatives">
-            <ins title="nlp 2.00">:</ins>
+            <ins title="nlp 2.00">scripsi:</ins>
           </span>
         </span>
         <span id="w_456" class="ocr_word" title="bbox 1793 3032 1985 3080" lang="grc">
