--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0569.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0569.html
@@ -134,9 +134,14 @@
             <ins title="nlp 2.00">Τοῦτο</ins>
           </span>
         </span>
-        <span lang="grc" title="bbox 433 557 779 584" class="ocr_word" id="w_22">
+        <span id="w_22_0" class="ocr_word" title="bbox 433 557 779 584">
           <span class="alternatives">
-            <ins title="nlp 2.00">κατασκευαστιχόν</ins>
+            <ins class="alt" title="nlp 2.00">κατασκευαστικόν</ins>
+          </span>
+        </span>
+        <span id="w_22_1" class="ocr_word" title="bbox 433 557 779 584">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span lang="grc" title="bbox 813 557 890 584" class="ocr_word" id="w_23">
@@ -172,11 +177,6 @@
         <span lang="grc" title="bbox 1448 560 1528 585" class="ocr_word" id="w_29">
           <span class="alternatives">
             <ins title="nlp 1.00" class="alt">ἐστι</ins>
-          </span>
-        </span>
-        <span lang="grc" title="bbox 1550 546 1849 600" class="ocr_word" id="w_30">
-          <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">κατηγορεῖσθαι</ins>
           </span>
         </span>
       </span>
@@ -1275,9 +1275,14 @@
             <ins title="nlp 1.00" class="alt">τρίτος</ins>
           </span>
         </span>
-        <span lang="grc" title="bbox 574 1791 886 1847" class="ocr_word" id="w_246">
+        <span id="w_246_0" class="ocr_word" title="bbox 574 1791 886 1847">
           <span class="alternatives">
-            <ins title="nlp 2.00">προσθιορισμός·</ins>
+            <ins class="alt" title="nlp 2.00">προσδιορισμός·</ins>
+          </span>
+        </span>
+        <span id="w_246_1" class="ocr_word" title="bbox 574 1791 886 1847">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span lang="grc" title="bbox 925 1806 1141 1845" class="ocr_word" id="w_247">
@@ -1308,11 +1313,6 @@
         <span lang="grc" title="bbox 1669 1805 1712 1830" class="ocr_word" id="w_252">
           <span class="alternatives">
             <ins title="nlp 1.00" class="alt">οὐ</ins>
-          </span>
-        </span>
-        <span lang="grc" title="bbox 1753 1791 1849 1831" class="ocr_word" id="w_253">
-          <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">κατὰ</ins>
           </span>
         </span>
       </span>
