--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0517.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0517.html
@@ -63,8 +63,7 @@
         </span>
         <span title="bbox 1858 95 1930 136" class="ocr_word" id="w_9">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">IGI</ins>
-            <del title="nlp 0.90">IGI</del>
+            <ins title="nlp 2.00">161</ins>
           </span>
         </span>
       </span>
@@ -1125,7 +1124,7 @@
         </span>
         <span lang="grc" title="bbox 1735 1379 1874 1433" class="ocr_word" id="w_217">
           <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">μονὴν</ins>
+            <ins title="nlp 2.00">(μονὴν</ins>
           </span>
         </span>
       </span>
@@ -1304,9 +1303,14 @@
             <ins title="nlp 1.00" class="alt">εἴπῃς</ins>
           </span>
         </span>
-        <span lang="grc" title="bbox 1158 1600 1281 1625" class="ocr_word" id="w_252">
+        <span id="w_252_0" class="ocr_word" title="bbox 1158 1600 1281 1625">
           <span class="alternatives">
-            <ins title="nlp 2.00">῾τούτῳ</ins>
+            <ins class="alt" title="nlp 2.00">῾τούτῳ</ins>
+          </span>
+        </span>
+        <span id="w_252_1" class="ocr_word" title="bbox 1158 1600 1281 1625">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span lang="grc" title="bbox 1320 1601 1374 1624" class="ocr_word" id="w_253">
@@ -1332,11 +1336,6 @@
         <span lang="grc" title="bbox 1696 1601 1748 1630" class="ocr_word" id="w_257">
           <span class="alternatives">
             <ins title="nlp 1.00" class="alt">ὡς</ins>
-          </span>
-        </span>
-        <span lang="grc" title="bbox 1779 1602 1878 1630" class="ocr_word" id="w_258">
-          <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">εἶδος</ins>
           </span>
         </span>
       </span>
@@ -1408,9 +1407,14 @@
         </span>
       </span>
       <span title="bbox 198 1723 1880 1780" class="ocr_line">
-        <span lang="grc" title="bbox 198 1725 375 1780" class="ocr_word" id="w_272">
+        <span id="w_272_0" class="ocr_word" title="bbox 198 1725 375 1780">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἄτομον᾿ </ins>
+            <ins class="alt" title="nlp 2.00">ἄτομον᾿,</ins>
+          </span>
+        </span>
+        <span id="w_272_1" class="ocr_word" title="bbox 198 1725 375 1780">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span lang="grc" title="bbox 408 1741 575 1779" class="ocr_word" id="w_273">
@@ -1451,11 +1455,6 @@
         <span lang="grc" title="bbox 1511 1723 1608 1764" class="ocr_word" id="w_280">
           <span class="alternatives">
             <ins title="nlp 1.00" class="alt">ἐστι·</ins>
-          </span>
-        </span>
-        <span lang="grc" title="bbox 1642 1725 1880 1778" class="ocr_word" id="w_281">
-          <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">διαιρεθῆναι</ins>
           </span>
         </span>
       </span>
@@ -1681,9 +1680,14 @@
             <ins title="nlp 1.00" class="alt">φθείρεται·</ins>
           </span>
         </span>
-        <span lang="grc" title="bbox 1590 1998 1669 2038" class="ocr_word" id="w_326">
+        <span id="w_326_0" class="ocr_word" title="bbox 1590 1998 1669 2038">
           <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">οἷον</ins>
+            <ins class="alt" title="nlp 2.00">|</ins>
+          </span>
+        </span>
+        <span id="w_326_1" class="ocr_word" title="bbox 1590 1998 1669 2038">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">οἷον</ins>
           </span>
         </span>
         <span lang="grc" title="bbox 1691 2015 1715 2052" class="ocr_word" id="w_327">
@@ -1696,9 +1700,9 @@
             <ins title="nlp 1.00" class="alt">κύων</ins>
           </span>
         </span>
-        <span title="bbox 1863 2003 1942 2039" class="ocr_word" id="w_329">
+        <span id="w_329_0" class="ocr_word" title="bbox 1863 2003 1942 2039">
           <span class="alternatives">
-            <ins title="nlp 2.00">194ν</ins>
+            <ins class="alt" title="nlp 2.00">194v</ins>
           </span>
         </span>
       </span>
@@ -2208,20 +2212,19 @@
             <ins title="nlp 1.00" class="alt">εἶναι</ins>
           </span>
         </span>
-        <span lang="grc" title="bbox 1546 2653 1717 2697" class="ocr_word" id="w_427">
+        <span id="w_427_0" class="ocr_word" title="bbox 1546 2653 1717 2697">
           <span class="alternatives">
-            <ins title="nlp 2.00">(τοιαύτην</ins>
+            <ins class="alt" title="nlp 2.00">(τοιαύτην</ins>
+          </span>
+        </span>
+        <span id="w_427_1" class="ocr_word" title="bbox 1546 2653 1717 2697">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span title="bbox 1743 2651 1824 2692" class="ocr_word" id="w_428">
           <span class="alternatives">
             <ins title="nlp 2.00">om.)</ins>
-          </span>
-        </span>
-        <span title="bbox 1844 2651 1875 2682" class="ocr_word" id="w_429">
-          <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">V</ins>
-            <del title="nlp 0.90">V</del>
           </span>
         </span>
       </span>
@@ -2828,12 +2831,7 @@
         </span>
         <span id="w_542_0" class="ocr_word" title="bbox 1484 3117 1591 3151">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">2089</ins>
-          </span>
-        </span>
-        <span id="w_542_1" class="ocr_word" title="bbox 1484 3117 1591 3151">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">:</ins>
+            <ins class="alt" title="nlp 2.00">2089:</ins>
           </span>
         </span>
         <span lang="grc" title="bbox 1619 3117 1652 3150" class="ocr_word" id="w_543">
